add 'button-container' class and matching CSS

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,11 +1,27 @@
-.body {
+body {
     background-color: rgb(247, 245, 245);
 }
 .header {
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align:center;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .recipe {
-    color: black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:black;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+.button-container {
+    background: grey;
+    text-align: center;
+    padding: 8px;
+}
+button {
+    border: 1px solid #dad8d8;
+    border-radius: 6px;
+    padding:8px 16px;
+    margin-top: auto;
+    margin-bottom: 8px;
+}
+ul {
+    list-style: none;
+    text-align: left;
+} 
